tests/errors/_questions/preprocessor/incorrect/include/redef/temp.c
//#define KEK 1 #define KE 1 
/*int main ()
{
	#if KEK == 0 
		printf("0\n");
	#elif KEK == 1
		printf("1\n");
	#else
		printf("10\n");
	#endif

	return 0;
}*/
